# iohk-test-task

./: README.md  iohk-test-task.cabal  node-list.yaml  stack.yaml  test.sh
app/: Main.hs
