name:                 iohk-test-task
version:              0.0.1.0
cabal-version:        >= 1.18
tested-with:          GHC==8.0.2
license:              BSD3
license-file:         LICENSE.md
author:               Mark Karpov <markkarpov92@gmail.com>
maintainer:           Mark Karpov <markkarpov92@gmail.com>
homepage:             https://github.com/mrkkrp/iohk-test-task
bug-reports:          https://github.com/mrkkrp/iohk-test-task/issues
category:             Control
synopsis:             See readme.
build-type:           Simple
description:          See readme.
extra-doc-files:      README.md

source-repository head
  type:               git
  location:           https://github.com/mrkkrp/iohk-test-task.git

executable iohktt
  main-is:            Main.hs
  hs-source-dirs:     app
  build-depends:      aeson
                    , base
                    , binary
                    , bytestring
                    , distributed-process
                    , distributed-process-simplelocalnet
                    , lens
                    , network
                    , network-transport
                    , optparse-applicative
                    , tf-random
                    , vector
                    , yaml
  ghc-options:        -O2 -Wall -threaded -rtsopts -O2 -with-rtsopts=-N
  default-language:   Haskell2010
